--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -12,6 +12,7 @@ commands:
     description: Commands for manipulating permissions.
     usage: |
         /<command> reload - reload the configuration from disk.
+        /<command> save - save chanes to disk.
         /<command> check <node> [player] - check if a player or the sender has a permission (any plugin).
         /<command> info <node> - prints information on a specific permission.
         /<command> dump [player] [page] - prints info about a player's (or the sender's) permissions.
@@ -37,6 +38,7 @@ permissions:
     children:
       permissions.help: true
       permissions.reload: true
+      permissions.save: true
       permissions.check: true
       permissions.info: true
       permissions.dump: true
